syntax = "proto3";

package kv;

service KV {
   rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
   rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}

message AppendEntriesRequest {
   uint64 term = 1;
   uint32 leaderId = 2; // Port which leader is running in
   uint64 prevLogIndex = 3;
   uint64 prevLogTerm = 4;
   repeated string entries = 5;
   uint64 leaderCommit = 6;
}

message AppendEntriesResponse {
   uint64 term = 1;
   bool success = 2;  
}

message RequestVoteRequest {
   uint64 term = 1;
   uint32 candidateId = 2; // Port which candidate is running in
   uint64 lastLogIndex = 3;
   uint64 lastLogTerm = 4;
}

message RequestVoteResponse {
   uint64 term = 1;
   bool voteGranted = 2;
}